Fixed a bug in Ubuntu python package building by switching to CDBS for python. Added a working pitivi stem file.

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Getting started on Debain systems:
 
 	# setup pbuilder:
 	cd ~
-	echo "COMPONENTS=\"main restricted universe multiverse\"" >> ~/.pbuilderrc
+	echo "COMPONENTS=\"main restricted universe multiverse\"" > ~/.pbuilderrc
 	sudo pbuilder create
 
 Getting started on Fedora systems:
