--- a/README
+++ b/README
@@ -76,7 +76,7 @@ Packagetastic one time setup:
 
 Building packages:
 	# Make sure you have a stem file for the package you want
-	ls stems/hello.py
+	ls stems/hello.stem
 
 	# Download the source code mentioned in the stem file
 	cd sources
