--- a/README
+++ b/README
@@ -18,7 +18,9 @@ Getting started on Debian:
 	echo 'username ALL=(ALL) ALL' >> /etc/sudoers
 
 	# install requirements:
-	sudo apt-get install build-essential cdbs dh-make pbuilder fakeroot debhelper devscripts gnupg python-pexpect python-mako bzr
+	sudo apt-get install build-essential cdbs dh-make pbuilder fakeroot \
+	debhelper devscripts gnupg python-dev python-distutils-extra \
+	python-pexpect python-mako bzr
 
 	# create gpg key:
 	gpg --no-use-agent --gen-key
@@ -31,7 +33,9 @@ Getting started on Debian:
 Getting started on Ubuntu:
 
 	# install requirements:
-	sudo apt-get install build-essential cdbs dh-make pbuilder fakeroot debhelper devscripts gnupg python-pexpect python-mako bzr
+	sudo apt-get install build-essential cdbs dh-make pbuilder fakeroot \
+	debhelper devscripts gnupg python-dev python-distutils-extra \
+	python-pexpect python-mako bzr
 
 	# create gpg key:
 	gpg --no-use-agent --gen-key
@@ -46,14 +50,15 @@ Getting started on Ubuntu:
 	# the popup dialog box.
 	sed -i 's/^use-agent$/#use-agent/' ~/.gnupg/gpg.conf
 
-Getting started on Fedora systems:
+Getting started on Fedora:
 
 	# add your user to the sudo group
 	echo 'username ALL=(ALL) ALL' >> /etc/sudoers
 
 	# install requirements:
 	sudo yum groupinstall "Development Tools"
-	sudo yum install mock rpmdevtools pexpect python-mako python-devel
+	sudo yum install mock rpmdevtools pexpect python-mako python-devel \
+	python-distutils-extra
 
 	# create gpg key:
 	gpg --no-use-agent --gen-key
